{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 35,
  "lineage": "b02959a7-1d1a-4dbe-fe7d-bf2bb28f0ca9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:subnet/subnet-00fedcfd6caadf0e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 55,
            "cidr_block": "10.1.0.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-pomodoro-backend-private-1a"
                ]
              }
            ],
            "id": "subnet-00fedcfd6caadf0e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405952903393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "production",
              "Name": "prod-pomodoro-backend-private-1a",
              "Service": "pomodoro"
            },
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:subnet/subnet-06532a1e5a0b1cc0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 55,
            "cidr_block": "10.1.0.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-pomodoro-backend-private-1c"
                ]
              }
            ],
            "id": "subnet-06532a1e5a0b1cc0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405952903393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "production",
              "Name": "prod-pomodoro-backend-private-1c",
              "Service": "pomodoro"
            },
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:subnet/subnet-033351aac052ecbed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 58,
            "cidr_block": "10.1.0.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-pomodoro-backend-public-1a"
                ]
              }
            ],
            "id": "subnet-033351aac052ecbed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405952903393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "production",
              "Name": "prod-pomodoro-backend-public-1a",
              "Service": "pomodoro"
            },
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:subnet/subnet-02d3e96274447323b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 58,
            "cidr_block": "10.1.0.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-pomodoro-backend-public-1c"
                ]
              }
            ],
            "id": "subnet-02d3e96274447323b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405952903393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "production",
              "Name": "prod-pomodoro-backend-public-1c",
              "Service": "pomodoro"
            },
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "pomodoro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:vpc/vpc-084a1bfe62bfa4ac0",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c588c09e994b2027",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06354996e82a84e05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084a1bfe62bfa4ac0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a919045c1a953ad9",
            "owner_id": "405952903393",
            "tags": {
              "Description": "Managed by Terraform",
              "Name": "pomodoro",
              "Service": "pomodoro"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "prod_pomodoro_backend_blue_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:listener/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f/22a3e6db3f048e12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:listener/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f/22a3e6db3f048e12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:loadbalancer/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Service": "pomodoro-backend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.prod_pomodoro_backend_lb",
            "aws_security_group.prod_pomodoro_backend_alb",
            "data.aws_subnet.public_a",
            "data.aws_subnet.public_c",
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "prod_pomodoro_backend_blue_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:listener/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f/bb937bb37a2e50a3",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:405952903393:certificate/6995268c-2bda-40a4-bddc-f779a9f8bcac",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:targetgroup/prod-pomodoro-backend-blue/935564324960031d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:listener/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f/bb937bb37a2e50a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:loadbalancer/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Service": "pomodoro-backend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.prod_pomodoro_backend_blue",
            "aws_lb.prod_pomodoro_backend_lb",
            "aws_security_group.prod_pomodoro_backend_alb",
            "data.aws_acm_certificate.pomodoro",
            "data.aws_subnet.public_a",
            "data.aws_subnet.public_c",
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "prod_pomodoro_backend_green_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:listener/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f/2040dadeb265adc7",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:405952903393:certificate/6995268c-2bda-40a4-bddc-f779a9f8bcac",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:targetgroup/prod-pomodoro-backend-green/ef87cb98a9efeaca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:listener/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f/2040dadeb265adc7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:loadbalancer/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 8080,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Service": "pomodoro-backend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.prod_pomodoro_backend_green",
            "aws_lb.prod_pomodoro_backend_lb",
            "aws_security_group.prod_pomodoro_backend_alb",
            "data.aws_acm_certificate.pomodoro",
            "data.aws_subnet.public_a",
            "data.aws_subnet.public_c",
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "prod_pomodoro_backend_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:targetgroup/prod-pomodoro-backend-blue/935564324960031d",
            "arn_suffix": "targetgroup/prod-pomodoro-backend-blue/935564324960031d",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:targetgroup/prod-pomodoro-backend-blue/935564324960031d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-pomodoro-backend-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Service": "pomodoro-backend"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          },
          "dependencies": [
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "prod_pomodoro_backend_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:targetgroup/prod-pomodoro-backend-green/ef87cb98a9efeaca",
            "arn_suffix": "targetgroup/prod-pomodoro-backend-green/ef87cb98a9efeaca",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:targetgroup/prod-pomodoro-backend-green/ef87cb98a9efeaca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-pomodoro-backend-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Service": "pomodoro-backend"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          },
          "dependencies": [
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod_pomodoro_backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "pomodoro-backend",
                "enabled": true,
                "prefix": "production"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:loadbalancer/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f",
            "arn_suffix": "app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-pomodoro-backend-alb-1178045277.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:405952903393:loadbalancer/app/prod-pomodoro-backend-alb/bb99cfd8f6619c2f",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-pomodoro-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0eb01e41fbad3987c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d3e96274447323b"
              },
              {
                "subnet_id": "subnet-033351aac052ecbed"
              }
            ],
            "subnets": [
              "subnet-02d3e96274447323b",
              "subnet-033351aac052ecbed"
            ],
            "tags": {
              "Name": "prod-pomodoro-backend"
            },
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Name": "prod-pomodoro-backend",
              "Service": "pomodoro-backend"
            },
            "vpc_id": "vpc-084a1bfe62bfa4ac0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.prod_pomodoro_backend_alb",
            "data.aws_subnet.public_a",
            "data.aws_subnet.public_c",
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_pomodoro_backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:security-group/sg-0eb01e41fbad3987c",
            "description": "prod-pomodoro-backend-alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb01e41fbad3987c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Blue/Green deployment",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "prod-pomodoro-backend-alb",
            "name_prefix": "",
            "owner_id": "405952903393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-pomodoro-backend-alb"
            },
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Name": "prod-pomodoro-backend-alb",
              "Service": "pomodoro-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_pomodoro_backend_ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:security-group/sg-0a16c059000d554ce",
            "description": "prod-pomodoro-backend-ecs-task inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a16c059000d554ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eb01e41fbad3987c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-pomodoro-backend-ecs-task",
            "name_prefix": "",
            "owner_id": "405952903393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-pomodoro-backend-ecs-task"
            },
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Name": "prod-pomodoro-backend-ecs-task",
              "Service": "pomodoro-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.prod_pomodoro_backend_alb",
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_pomodoro_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:405952903393:security-group/sg-0fb51198cc71c9de4",
            "description": "prod-pomodoro-db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb51198cc71c9de4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a16c059000d554ce"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "prod-pomodoro-db",
            "name_prefix": "",
            "owner_id": "405952903393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-pomodoro-backend-db"
            },
            "tags_all": {
              "CreatedByRole": "terraformer",
              "Description": "Managed by Terraform",
              "Name": "prod-pomodoro-backend-db",
              "Service": "pomodoro-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a1bfe62bfa4ac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.prod_pomodoro_backend_alb",
            "aws_security_group.prod_pomodoro_backend_ecs_task",
            "data.aws_vpc.pomodoro"
          ]
        }
      ]
    }
  ]
}